Try to fix hover error on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,15 @@ p {
 }
 
 
+/*************** Remove hover effect on mobile **************/
+
+@media (hover: none) {
+    .answer-button {
+        background-color: #0075ff;
+    }
+}
+
+
 /*************** Leaderboard styling **************/
 
 .centered-high-scores {
